// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardRailView renders correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <img
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main title"
      >
        ci.dashboard.activeBuilds
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main content"
    >
      <div
        class="StyledProps--font StyledProps--main activeBuildCard"
      >
        <span
          class="bp3-icon StyledProps--main buildIcon"
          data-icon="ci-active-build"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 20"
            width="16"
          >
            <path
              d="M18.931 0l-5.068 2.926v2.057l-1.778-1.026-5.067 2.926v2.156l-1.95-1.126L0 10.84v5.852l5.068 2.926 5.068-2.926v-2.156l1.95 1.126 5.068-2.927V10.68l1.777 1.026L24 8.78V2.926L18.931 0zm3.75 3.18l-3.749 2.165-3.75-2.165 3.75-2.165 3.75 2.165zm-8.818 2.818v2.277l-1.777 1.026-3.75-2.164 3.75-2.165 1.777 1.026zm2.412 3.158l-1.09-.63 1.09-.628v1.258zm-1.533-1.388V6.506l1.093.63-1.093.632zm-7.724 2.286v2.079l-1.95 1.125-3.75-2.165 3.75-2.165 1.95 1.126zm2.24 2.96l-1.004-.58 1.003-.58v1.16zm-1.361-1.389v-1.064l.921.532-.921.532zm-7.018.23l3.75 2.165v4.329l-3.75-2.165v-4.33zm8.378 4.329l-3.75 2.165v-4.33l1.868-1.078 1.882 1.087v2.156zm-1.36-6.637v-1.65l3.75 2.165v4.33l-1.51-.872v-2.68l-2.24-1.293zm8.378 2.68l-3.75 2.165v-4.33l1.781-1.028 1.969 1.137v2.056zm-1.533-6.736V3.94l3.75 2.165v4.33l-1.338-.773v-2.78L14.742 5.49zm4.629 4.945v-4.33l3.75-2.165v4.33l-3.75 2.165z"
              fill="#6B6D85"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main titleAndMessage"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--margin-bottom-xsmall StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            Pipeline1
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            This is message
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="statusLabel pendingApprovalLabel"
          >
            <img
              alt=""
              src="test-file-stub"
            />
            PENDING APPROVAL
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main activeBuildCard"
      >
        <span
          class="bp3-icon StyledProps--main buildIcon"
          data-icon="ci-active-build"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 20"
            width="16"
          >
            <path
              d="M18.931 0l-5.068 2.926v2.057l-1.778-1.026-5.067 2.926v2.156l-1.95-1.126L0 10.84v5.852l5.068 2.926 5.068-2.926v-2.156l1.95 1.126 5.068-2.927V10.68l1.777 1.026L24 8.78V2.926L18.931 0zm3.75 3.18l-3.749 2.165-3.75-2.165 3.75-2.165 3.75 2.165zm-8.818 2.818v2.277l-1.777 1.026-3.75-2.164 3.75-2.165 1.777 1.026zm2.412 3.158l-1.09-.63 1.09-.628v1.258zm-1.533-1.388V6.506l1.093.63-1.093.632zm-7.724 2.286v2.079l-1.95 1.125-3.75-2.165 3.75-2.165 1.95 1.126zm2.24 2.96l-1.004-.58 1.003-.58v1.16zm-1.361-1.389v-1.064l.921.532-.921.532zm-7.018.23l3.75 2.165v4.329l-3.75-2.165v-4.33zm8.378 4.329l-3.75 2.165v-4.33l1.868-1.078 1.882 1.087v2.156zm-1.36-6.637v-1.65l3.75 2.165v4.33l-1.51-.872v-2.68l-2.24-1.293zm8.378 2.68l-3.75 2.165v-4.33l1.781-1.028 1.969 1.137v2.056zm-1.533-6.736V3.94l3.75 2.165v4.33l-1.338-.773v-2.78L14.742 5.49zm4.629 4.945v-4.33l3.75-2.165v4.33l-3.75 2.165z"
              fill="#6B6D85"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main titleAndMessage"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--margin-bottom-xsmall StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            Pipeline1
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            This is message
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="statusLabel pendingApprovalLabel"
          >
            <img
              alt=""
              src="test-file-stub"
            />
            PENDING APPROVAL
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main activeBuildCard"
      >
        <span
          class="bp3-icon StyledProps--main buildIcon"
          data-icon="ci-active-build"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 24 20"
            width="16"
          >
            <path
              d="M18.931 0l-5.068 2.926v2.057l-1.778-1.026-5.067 2.926v2.156l-1.95-1.126L0 10.84v5.852l5.068 2.926 5.068-2.926v-2.156l1.95 1.126 5.068-2.927V10.68l1.777 1.026L24 8.78V2.926L18.931 0zm3.75 3.18l-3.749 2.165-3.75-2.165 3.75-2.165 3.75 2.165zm-8.818 2.818v2.277l-1.777 1.026-3.75-2.164 3.75-2.165 1.777 1.026zm2.412 3.158l-1.09-.63 1.09-.628v1.258zm-1.533-1.388V6.506l1.093.63-1.093.632zm-7.724 2.286v2.079l-1.95 1.125-3.75-2.165 3.75-2.165 1.95 1.126zm2.24 2.96l-1.004-.58 1.003-.58v1.16zm-1.361-1.389v-1.064l.921.532-.921.532zm-7.018.23l3.75 2.165v4.329l-3.75-2.165v-4.33zm8.378 4.329l-3.75 2.165v-4.33l1.868-1.078 1.882 1.087v2.156zm-1.36-6.637v-1.65l3.75 2.165v4.33l-1.51-.872v-2.68l-2.24-1.293zm8.378 2.68l-3.75 2.165v-4.33l1.781-1.028 1.969 1.137v2.056zm-1.533-6.736V3.94l3.75 2.165v4.33l-1.338-.773v-2.78L14.742 5.49zm4.629 4.945v-4.33l3.75-2.165v4.33l-3.75 2.165z"
              fill="#6B6D85"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main titleAndMessage"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--margin-bottom-xsmall StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            Pipeline1
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
            style="--text-line-clamp: 1;"
          >
            This is message
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="statusLabel pendingApprovalLabel"
          >
            <img
              alt=""
              src="test-file-stub"
            />
            PENDING APPROVAL
          </div>
        </div>
      </div>
    </div>
    <a
      class="bp3-button StyledProps--font Button--button Button--with-current-color Button--link StyledProps--main showMoreLink"
      href="javascript:void()"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        seeAll
      </span>
    </a>
  </div>
</div>
`;

exports[`CardRailView renders correctly when content is empty 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <img
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main title"
      >
        repositories
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main content contentEmpty"
    >
      <div
        class="StyledProps--font StyledProps--main emptyView"
      >
        <div
          class="StyledProps--font StyledProps--main emptyViewItem"
        />
        <div
          class="StyledProps--font StyledProps--main emptyViewItem"
        />
        <div
          class="StyledProps--font StyledProps--main emptyViewCard"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            ci.dashboard.noRepositories
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardRailView renders correctly while loading="true" 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <img
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main title"
      >
        ci.dashboard.activeBuilds
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main content"
    >
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
    </div>
  </div>
</div>
`;
